--- a/models/pubspec.yaml
+++ b/models/pubspec.yaml
@@ -5,6 +5,10 @@ version: 1.0.0
 environment:
   sdk: '>=2.19.4 <3.0.0'
 
+dependencies:
+  flutter:
+    sdk: flutter
+
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
