--- a/models/pubspec.yaml
+++ b/models/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  app_base:
+    path: ../app_base
+
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
