--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   figma_squircle: 0.5.3
   intl: 0.18.0
-
+  provider: 6.0.5
+  
   app_base:
     path: ./app_base
 
