--- a/platform_utils/pubspec.yaml
+++ b/platform_utils/pubspec.yaml
@@ -1,4 +1,4 @@
-name: platform
+name: platform_utils
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
 publish_to: 'none'
