--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,14 @@ dependencies:
   gmail:
     path: ./gmail
 
-  platform:
-    path: ./platform
+  platform_utils:
+    path: ./platform_utils
 
   window:
     path: ./window
+
+  cv_app:
+    path: ./cv_app
 
 dev_dependencies:
   flutter_test:
@@ -50,3 +53,4 @@ flutter:
   assets:
     - assets/wallpapers/
     - assets/apps/
+    - assets/
