--- a/applications/gmail/pubspec.yaml
+++ b/applications/gmail/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   app_base:
     path: ../app_base
 
+  url_launcher: ^6.1.10
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
