--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "iphone_desktop",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#D2EADB",
+    "theme_color": "#D2EADB",
     "description": "iPhone desktop emulator",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
