Implement wallpaper blur hash

--- a/applications/cv_app/pubspec.yaml
+++ b/applications/cv_app/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   google_fonts: ^4.0.3
   intl: ^0.18.0
 
+  models:
+    path: ../../models
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
