--- a/models/pubspec.yaml
+++ b/models/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
   app_base:
     path: ../applications/app_base
 
+  json_annotation: ^4.8.0
+
+
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+  json_serializable: ^6.6.1
+  build_runner: ^2.3.3
