--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   figma_squircle: 0.5.3
   intl: 0.18.0
   provider: 6.0.5
+  flutter_blurhash: ^0.7.0
   
   app_base:
     path: ./applications/app_base
