Implement leetcode app

--- a/assets/config.json
+++ b/assets/config.json
@@ -8,14 +8,16 @@
     "name": "Artem Artemov",
     "bio": "24 y.o. paranoid programmer based on Serbia \uD83E\uDD2A",
     "avatar": "https://www.nicepng.com/png/full/145-1451818_drawing-adventure-bmo-adventure-time-bmo-drawing.png",
-    "github_url": "https://github.com/iKrupp",
+    "github_url": "arteminthesky",
     "telegram": "https://t.me/akiberq",
     "email": "akiberq@gmail.com",
     "age": 24,
     "sex": "male",
     "linkedin": "https://linkedin.com/in/artemparfenov",
     "country": "Russia / Serbia",
+    "leetcode": "https://leetcode.com/akiberq",
     "about_me": "",
+    "twitter": "",
     "skills": [
       "Flutter",
       "Dart",
